# python-project-lvl2

./: .travis.yml  Makefile  README.md  Tutorial.txt  pyproject.toml
gendiff/: diff.py
gendiff/scripts/: gendiff.py
gendiff/views/: __init__.py  default_view.py  json_view.py  plain_view.py
tests/: test_default.py  test_json.py  test_plain.py  tmp.py
tests/fixtures/: 2__after.yaml  2__before.yaml
