[tool.poetry]
name = "mascai_gendiff"
version = "0.1.0"
description = ""
authors = ["mascai <msumoskalenko@gmail.com>"]
packages = [
    { include = "gendiff"},
]

[tool.poetry.dependencies]
python = "^3.5"
PyYAML = "^3"
pytest-cov = "^2.8"
pytest = "^5.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

